<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="connectKeyStore"
            type="com.example.mjd_final.ConnectKeyStore" />

        <variable
            name="isLoading"
            type="boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_init"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="106dp"
                android:layout_marginRight="24dp"
                android:text="@string/welcome_to_blockchain"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateTint="@color/colorAccent"
                android:visibility="@{isLoading?View.VISIBLE:View.GONE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/round_btn_bg"
                android:enabled="@{!isLoading}"
                android:gravity="center_vertical"
                android:onClick="@{(view)-> connectKeyStore.onClickBlockchainKeystore()}"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:text="@string/start_with_samsung_blockchain_keystore"
                android:textAlignment="center"
                android:textColor="#FAFAFA"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@id/btn_start_with_in_app_keystore"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/btn_start_with_in_app_keystore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="71dp"
                android:background="@drawable/txt_btn_bg"
                android:onClick="@{(view)-> connectKeyStore.onClickInAppKeystore()}"
                android:text="@string/start_with_in_app_keystore"
                android:textColor="#8f8f8f"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_splash"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/iv_splash_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_logo"
                android:contentDescription="@string/AndroidSide"
                android:src="@drawable/ic_logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tv_splash_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/montserrat_light"
                android:gravity="center"
                android:text="@string/MJD"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_splash_icon" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>